# learning_vulkan

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  out.txt
scripts/: all.sh  compile_shaders.sh
shaders/: shader.frag  shader.vert
src/engine/: camera.c  event.h
src/engine/backend/: glfw_helpers.c  glfw_helpers.h  vulkan_device.c  vulkan_helpers.c  vulkan_helpers.h  vulkan_memory.c  vulkan_pipeline.c  vulkan_queues.c  vulkan_render_pass.c  vulkan_swapchain.c
src/engine/frontend/: buffer.c  camera.c  camera.h  graphics.h  renderer.c  renderer.h  renderer_context.c  renderer_loop.c  renderer_scene.c  scene.c  shader.c
src/engine/graphics/: buffer.c  buffer.h  graphics.h  image.c  image.h  renderer.c  renderer.h  scene.c  shader.c  shader.h  window.c  window.h
src/sandbox/: application.c  application.h  main.c
src/sandbox/frontend/: main.c
src/utility/: load_file.c  load_file.h  log.h  math.h  memory_arena.c  memory_arena.h  sparse_set.h
src/utility/types/dynamic_array/: dynamic_array_include.h  dynamic_array_template.h
